objects/Action_Plan_Attack__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipName>Action_Plan_Attack</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Action_Plan_Attack</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_A__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action A</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_B__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action B</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_C__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action C</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_D__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action D</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_E__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action E</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <label>Action Plan</label>
        <referenceTo>Action_Plan__c</referenceTo>
        <relationshipName>Action_Plan_Attack</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Benefit_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Objective</label>
        <referenceTo>AccountObjective__c</referenceTo>
        <relationshipName>Action_Plan_Attack</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>By_When_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>By When 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>By_When_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>By When 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>By_When_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>By When 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>By_When_A__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>By When A</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>By_When_B__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>By When B</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>By_When_C__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>By When C</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>By_When_D__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>By When D</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>By_When_E__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>By When E</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Completed 2</description>
        <label>Completed 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Completed 3</description>
        <label>Completed 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_B__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Completed 2</description>
        <label>Completed B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Completed 3</description>
        <label>Completed C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_D__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Completed 4</description>
        <label>Completed D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_E__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed E</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution_Date_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Date_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Date_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Date_A__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Date A</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Date_B__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Date B</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Date_C__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Date C</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Date_D__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Date D</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Date_E__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Date E</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Resource_A__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Resource A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Resource_B__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Resource B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Resource_C__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Resource C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Resource_D__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Resource D</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Resource_E__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Resource E</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resources_1__c</fullName>
        <label>Resources 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resources_2__c</fullName>
        <label>Resources 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resources_3__c</fullName>
        <label>Resources 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resources_A__c</fullName>
        <label>Resources A</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resources_B__c</fullName>
        <label>Resources B</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resources_C__c</fullName>
        <label>Resources C</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resources_D__c</fullName>
        <label>Resources D</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resources_E__c</fullName>
        <label>Resources E</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Action_Plan_Attack</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Action_Plan_Attack1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Action_Plan_Attack2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_A__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who A</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Action_Plan_Attack_A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_B__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who B</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Action_Plan_Attack_B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who C</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Action_Plan_Attack_C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_D__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who D</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Action_Plan_Attack_D</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_E__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who E</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Action_Plan_Attack_E</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Plan of Attack</label>
    <nameField>
        <displayFormat>POA-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plans of Attack</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>